--- a/nationalparks-java-pipeline.adoc
+++ b/nationalparks-java-pipeline.adoc
@@ -32,7 +32,7 @@ on the current Deployment to automatically trigger when there is a new image or 
 
 == Configure Manual Deployments on Dev Application
 
-In the *CoolStore DEV* project, click on *Applications -> Deployments* on the left sidebar menu
+In the *userXY* project, click on *Applications -> Deployments* on the left sidebar menu
 and then on *catalog* deployment. Click on *Actions -> Edit* button:
 
 image::devops-pipeline-deployment-edit.png[Edit pipeline]
@@ -67,7 +67,7 @@ In the case of Jenkins we can move ahead without creating a binding. Select *Do 
 
 image::devops-jenkins-template-binding.png[Jenkins template binding]
 
-Jenkins will now be provisioned on the background. Return back to the **CI/CD** project by clicking *Continue to the project overview* link.
+Jenkins will now be provisioned on the background. Return back to the **userXY** project by clicking *Continue to the project overview* link.
 
 image::devops-jenkins-template-create.png[Jenkins template create]
 
@@ -77,7 +77,7 @@ image::devops-jenkins-deployed.png[Jenkins deployed]
 
 Notice how you see the actual Jenkins deployment and a Provisioned Service, this is because we deployed Jenkins from the Service Catalog as a service for our current project.
 
-We could have done the same as we just did by using one single command on the OpenShift CLI. This command will deploy the service Jenkins with a persistent configuration in your **CI/CD** project. 
+We could have done the same as we just did by using one single command on the OpenShift CLI. This command will deploy the service Jenkins with a persistent configuration in your **userXY** project. 
 
 WARNING: If you have successfully deployed Jenkins, do NOT execute this command.
 
@@ -90,7 +90,7 @@ oc new-app jenkins-persistent -n userXY
 
 For this example, we're going to store our pipeline in the same Gogs repository where we have our code. In a more real scenario, and in order to honor https://en.wikipedia.org/wiki/Infrastructure_as_Code[infrastructure as code] principle, we would store all the pipeline definitions along with every OpenShift resources definitions we would use.
 
-Log into your `nationalpaks` repository in Git as we are going to store in this repository our Jenkinsfile, that is, our pipeline definition.
+Log into your `nationalparks` repository in Git as we are going to store in this repository our Jenkinsfile, that is, our pipeline definition.
 
 CAUTION: In the following url(s), replace `{{ USER_NAME }}` with the Git username provided to you.
 
@@ -184,7 +184,7 @@ This pipeline has 4 stages defined:
 
 Create the OpenShift pipeline definition to use the Jenkins file. This is a regular OpenShift BuildConfig with a *JenkinsPipeline* strategy.
 
-In the **CI/CD** project, click on *Add to Project* > *Import YAML/JSON* and paste the following YAML file to create a pipeline 
+In the **userXY** project, click on *Add to Project* > *Import YAML/JSON* and paste the following YAML file to create a pipeline 
 that uses the `Jenkinsfile.workshop` from the `{{USER_NAME}}` git repository
 
 image::devops-pipeline-add-yaml-menu.png[Add yaml to project - Menu]
@@ -249,7 +249,7 @@ After a little while, it will finish, hopefully with success.
 
 image::devops-pipeline-finished.png[Pipeline finished]
 
-Once the pipeline has finished, you should see the nationalpaks application redeployed in your project. 
+Once the pipeline has finished, you should see the nationalparks application redeployed in your project. 
 
 You should notice that the number of the deployment (the number to the side of the deployment name) has increased. 
 
